--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@angular/animations": "~9.0.7",
     "@angular/cdk": "~9.1.3",
-    "@angular/common": "~9.0.7",
-    "@angular/core": "~9.0.7",
+    "@angular/common": "^6.1.10",
+    "@angular/core": "^6.1.10",
     "@angular/forms": "~9.0.7",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "~9.0.7",
@@ -22,12 +22,14 @@
     "@angular/router": "~9.0.7",
     "@ckeditor/ckeditor5-angular": "^1.2.2",
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
+    "angular2-tinymce": "^3.3.0",
     "rxjs": "~6.5.4",
+    "tinymce": "^4.9.10",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "^9.0.7",
     "@angular/compiler": "^9.0.7",
     "@angular/compiler-cli": "^9.0.7",
