--- a/package.json
+++ b/package.json
@@ -11,44 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.7",
-    "@angular/cdk": "~9.1.3",
-    "@angular/common": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "~9.0.7",
-    "@angular/material": "^9.1.3",
-    "@angular/platform-browser": "~9.0.7",
-    "@angular/platform-browser-dynamic": "~9.0.7",
-    "@angular/router": "~9.0.7",
-    "@ckeditor/ckeditor5-angular": "^1.2.2",
-    "@ckeditor/ckeditor5-build-classic": "^18.0.0",
+    "@angular/animations": "~9.1.9",
+    "@angular/cdk": "~9.2.4",
+    "@angular/common": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "~9.1.9",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "~9.1.9",
+    "@angular/platform-browser-dynamic": "~9.1.9",
+    "@angular/router": "~9.1.9",
+    "angular-froala-wysiwyg": "^3.1.1-1",
     "angular2-tinymce": "^3.3.0",
-    "rxjs": "~6.5.4",
-    "tinymce": "^4.9.10",
-    "tslib": "^1.10.0",
+    "rxjs": "~6.5.5",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "^9.0.7",
-    "@angular/compiler": "^9.0.7",
-    "@angular/compiler-cli": "^9.0.7",
-    "@angular/language-service": "~9.0.7",
+    "@angular/cli": "^9.1.7",
+    "@angular/compiler": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "~9.1.9",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^14.0.11",
     "check-dependencies": "^1.1.0",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~5.0.1",
-    "karma": "^4.4.1",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.3",
-    "ts-node": "^8.8.1",
-    "tslint": "^5.20.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
     "typescript": "^3.7.5"
   }
 }
