--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.1.9",
     "angular-froala-wysiwyg": "^3.1.1-1",
     "angular2-tinymce": "^3.3.0",
+    "dateformat": "^3.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
