--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "angular-froala-wysiwyg": "^3.1.1-1",
     "angular2-tinymce": "^3.3.0",
     "dateformat": "^3.0.3",
+    "ngx-quill": "^12.0.1",
+    "quill": "^1.3.7",
+    "quill-blot-formatter": "^1.0.5",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
