--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,7 @@
               "src/favicon.ico",
               "src/assets",
               "src/.htaccess",
-              "src/php",
-              "src/img"
+              "src/php"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
