--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@tinymce/tinymce-angular": "^4.1.0",
     "angular-froala-wysiwyg": "^3.1.1-1",
     "angular2-tinymce": "^3.3.0",
     "dateformat": "^3.0.3",
